--- a/WEBVR/package.json
+++ b/WEBVR/package.json
@@ -22,7 +22,10 @@
     "@angular/platform-browser-dynamic": "~9.1.1",
     "@angular/router": "~9.1.1",
     "hover.css": "^2.3.2",
+    "ngx-swiper-wrapper": "^9.0.1",
+    "ngx-useful-swiper": "^9.0.3",
     "rxjs": "~6.5.4",
+    "swiper": "^5.3.8",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
