adding routing for components and fixing responsive issues

--- a/WEBVR/.firebaserc
+++ b/WEBVR/.firebaserc
@@ -1,5 +1,14 @@
 {
   "projects": {
     "default": "webvr-25f1e"
+  },
+  "targets": {
+    "webvr-25f1e": {
+      "hosting": {
+        "WEBVR": [
+          "webvr-25f1e"
+        ]
+      }
+    }
   }
 }
