--- a/WEBVR/angular.json
+++ b/WEBVR/angular.json
@@ -25,7 +25,8 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.css"
+              "src/styles.css",
+              "./node_modules/swiper/css/swiper.css"
             ],
             "scripts": []
           },
@@ -119,6 +120,10 @@
               "devServerTarget": "WEBVR:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {}
         }
       }
     }
